# blackpill_blinky

./: .mxproject  CMakeLists.txt  Makefile  README.md  blackpill_blinky.ioc  cmake_build_debug.sh  gcc_cm4f.cmake  stm32cube.cmake
App/: app_main.c  app_main.h
Core/Inc/: stm32f4xx_it.h
Core/Src/: gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
